--- a/pricing.html
+++ b/pricing.html
@@ -180,13 +180,13 @@ footer { background:var(--ink); border-top:1px solid rgba(240,236,229,.06); padd
     <div class="hdr-inner">
       <a href="index.html" class="logo">OFFSITE<span class="f">.</span>GROWTH</a>
       <nav>
-        <a href="index.html#engine">The Engine</a>
-        <a href="index.html#who">Fit</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#engine">Services</a>
         <a href="index.html#process">Process</a>
         <a href="pricing.html" class="active">Pricing</a>
-        <a href="index.html#faq">FAQ</a>
+        <a href="index.html#results">Results</a>
       </nav>
-      <a href="index.html#form" class="hdr-apply">Apply Now</a>
+      <a href="index.html#form" class="hdr-apply">Get Started</a>
     </div>
   </div>
 </header>
@@ -342,11 +342,12 @@ footer { background:var(--ink); border-top:1px solid rgba(240,236,229,.06); padd
     <div class="foot-inner">
       <div class="foot-logo">OFFSITE<span>.</span>GROWTH</div>
       <div class="foot-links">
-        <a href="index.html#engine">The Engine</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#engine">Services</a>
         <a href="index.html#process">Process</a>
         <a href="pricing.html">Pricing</a>
-        <a href="index.html#faq">FAQ</a>
-        <a href="index.html#form">Apply</a>
+        <a href="index.html#results">Results</a>
+        <a href="index.html#form">Get Started</a>
       </div>
       <div class="foot-copy">© 2024 Offsite Growth. All rights reserved.</div>
     </div>
