--- a/pricing.html
+++ b/pricing.html
@@ -35,7 +35,7 @@ body::after { content:''; position:fixed; inset:0; background-image:url("data:im
 header { position:fixed; top:0; left:0; right:0; z-index:200; padding:26px 0; transition:padding .4s var(--ease), background .4s, border-color .4s; border-bottom:1px solid transparent; }
 header.stuck { padding:14px 0; background:rgba(12,12,12,.97); backdrop-filter:blur(16px); border-color:rgba(240,236,229,.06); }
 .hdr-inner { display:flex; align-items:center; justify-content:space-between; }
-.logo { font-family:var(--ff-d); font-size:21px; letter-spacing:.07em; }
+.logo { font-family:var(--ff-d); font-size:21px; letter-spacing:.07em; color:var(--paper); text-decoration:none; }
 .logo .f { color:var(--fire); }
 nav { display:flex; align-items:center; gap:36px; }
 nav a { font-size:11px; font-weight:500; letter-spacing:.18em; text-transform:uppercase; color:var(--dim); transition:color .2s; }
