--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@ footer { background: var(--ink-2); border-top: 1px solid rgba(240,236,229,.06); 
   .container { padding: 0 24px; }
   nav { display: none; }
   .burger { display: flex; }
+  .hdr-apply { display: none; }
   .problems, .engine-cards { grid-template-columns: 1fr; }
   .res-grid { grid-template-columns: 1fr; }
   .res-block { border-right: none !important; padding-left: 0 !important; border-bottom: 1px solid rgba(240,236,229,.08); }
@@ -647,18 +648,18 @@ footer { background: var(--ink-2); border-top: 1px solid rgba(240,236,229,.06); 
           <path d="M320 232 L320 280 L200 280" stroke="rgba(238,235,228,0.1)" stroke-width="1"/>
           <path d="M200 310 L200 368" stroke="#c85a1e" stroke-width="1.5" opacity="0.7"/>
           <rect x="140" y="20" width="120" height="44" rx="2" fill="rgba(200,90,30,0.12)" stroke="#c85a1e" stroke-width="1"/>
-          <text x="200" y="47" text-anchor="middle" fill="#c85a1e" font-family="Clash Display, sans-serif" font-weight="600" font-size="11" letter-spacing="1.5">MARKET STRATEGY</text>
+          <text x="200" y="47" text-anchor="middle" fill="#c85a1e" font-family="Clash Display, sans-serif" font-weight="600" font-size="11" letter-spacing="1.5">MARKET RESEARCH</text>
           <rect x="20" y="170" width="120" height="62" rx="2" fill="rgba(238,235,228,0.03)" stroke="rgba(238,235,228,0.08)"/>
-          <text x="80" y="198" text-anchor="middle" fill="rgba(238,235,228,0.5)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">DEMAND</text>
-          <text x="80" y="214" text-anchor="middle" fill="rgba(238,235,228,0.5)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">ACQUISITION</text>
+          <text x="80" y="198" text-anchor="middle" fill="rgba(238,235,228,0.5)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">SEARCH &amp;</text>
+          <text x="80" y="214" text-anchor="middle" fill="rgba(238,235,228,0.5)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">LSA ADS</text>
           <rect x="260" y="170" width="120" height="62" rx="2" fill="rgba(238,235,228,0.03)" stroke="rgba(238,235,228,0.08)"/>
-          <text x="320" y="198" text-anchor="middle" fill="rgba(238,235,228,0.5)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">CONVERSION</text>
-          <text x="320" y="214" text-anchor="middle" fill="rgba(238,235,228,0.5)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">INFRA</text>
+          <text x="320" y="198" text-anchor="middle" fill="rgba(238,235,228,0.5)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">LEAD</text>
+          <text x="320" y="214" text-anchor="middle" fill="rgba(238,235,228,0.5)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">TRACKING</text>
           <rect x="120" y="280" width="160" height="44" rx="2" fill="rgba(200,90,30,0.06)" stroke="rgba(200,90,30,0.2)"/>
-          <text x="200" y="307" text-anchor="middle" fill="rgba(238,235,228,0.7)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">REVENUE OPTIMIZATION</text>
+          <text x="200" y="307" text-anchor="middle" fill="rgba(238,235,228,0.7)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">MONTHLY OPTIMIZATION</text>
           <rect x="100" y="368" width="200" height="56" rx="2" fill="#c85a1e"/>
-          <text x="200" y="393" text-anchor="middle" fill="#fff" font-family="Clash Display, sans-serif" font-weight="700" font-size="12" letter-spacing="2">PREDICTABLE</text>
-          <text x="200" y="411" text-anchor="middle" fill="rgba(255,255,255,0.75)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="2">REVENUE GROWTH</text>
+          <text x="200" y="393" text-anchor="middle" fill="#fff" font-family="Clash Display, sans-serif" font-weight="700" font-size="12" letter-spacing="2">MORE BOOKED</text>
+          <text x="200" y="411" text-anchor="middle" fill="rgba(255,255,255,0.75)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="2">JOBS EVERY MONTH</text>
           <circle cx="200" cy="20" r="4" fill="#c85a1e"/>
           <circle cx="80" cy="170" r="3" fill="rgba(200,90,30,0.5)"/>
           <circle cx="320" cy="170" r="3" fill="rgba(200,90,30,0.5)"/>
@@ -1205,19 +1206,32 @@ const burg = document.getElementById('burg');
 const mobileNav = document.querySelector('nav');
 if (burg && mobileNav) {
   burg.addEventListener('click', () => {
-    const open = mobileNav.style.display === 'flex';
-    mobileNav.style.display = open ? 'none' : 'flex';
-    mobileNav.style.flexDirection = 'column';
-    mobileNav.style.position = 'absolute';
-    mobileNav.style.top = '100%';
-    mobileNav.style.left = '0';
-    mobileNav.style.right = '0';
-    mobileNav.style.background = 'rgba(12,12,12,0.98)';
-    mobileNav.style.padding = '20px 40px 28px';
-    mobileNav.style.gap = '20px';
-    mobileNav.style.borderBottom = '1px solid rgba(240,236,229,0.08)';
-    mobileNav.style.backdropFilter = 'blur(16px)';
-    if (open) mobileNav.style.display = 'none';
+    const isOpen = mobileNav.classList.contains('mob-open');
+    if (isOpen) {
+      mobileNav.classList.remove('mob-open');
+      mobileNav.removeAttribute('style');
+    } else {
+      mobileNav.classList.add('mob-open');
+      mobileNav.style.display = 'flex';
+      mobileNav.style.flexDirection = 'column';
+      mobileNav.style.position = 'absolute';
+      mobileNav.style.top = '100%';
+      mobileNav.style.left = '0';
+      mobileNav.style.right = '0';
+      mobileNav.style.background = 'rgba(12,12,12,0.98)';
+      mobileNav.style.padding = '24px 40px 32px';
+      mobileNav.style.gap = '22px';
+      mobileNav.style.borderBottom = '1px solid rgba(240,236,229,0.08)';
+      mobileNav.style.backdropFilter = 'blur(16px)';
+      mobileNav.style.zIndex = '999';
+    }
+  });
+  // Close menu when a link is clicked
+  mobileNav.querySelectorAll('a').forEach(a => {
+    a.addEventListener('click', () => {
+      mobileNav.classList.remove('mob-open');
+      mobileNav.removeAttribute('style');
+    });
   });
 }
 </script>
