--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ nav a:hover { color: var(--paper); }
   transform: skewX(-8deg);
 }
 .hero-grid {
-  display: grid; grid-template-columns: 1fr 400px; gap: 80px; align-items: end;
+  display: grid; grid-template-columns: 1fr 400px; gap: 80px; align-items: center;
 }
 .hero-eyebrow {
   display: flex; align-items: center; gap: 12px;
@@ -180,6 +180,7 @@ nav a:hover { color: var(--paper); }
 }
 .hero-machine {
   align-self: center;
+  max-height: 500px;
   opacity: 0; animation: fadeR 1.1s .55s var(--ease) forwards;
 }
 .hero-bottom {
