--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ nav a:hover { color: var(--paper); }
 .hero-machine {
   align-self: center;
   max-height: 500px;
+  overflow: visible;
   opacity: 0; animation: fadeR 1.1s .55s var(--ease) forwards;
 }
 .hero-bottom {
@@ -629,7 +630,7 @@ footer { background: var(--ink-2); border-top: 1px solid rgba(240,236,229,.06); 
       </div>
 
       <div class="hero-machine">
-        <svg viewBox="0 0 400 500" fill="none" xmlns="http://www.w3.org/2000/svg" style="width:100%;">
+        <svg viewBox="-10 -20 420 550" fill="none" xmlns="http://www.w3.org/2000/svg" style="width:100%;display:block;">
           <line x1="0" y1="60" x2="400" y2="60" stroke="rgba(240,236,229,0.04)"/>
           <line x1="0" y1="120" x2="400" y2="120" stroke="rgba(240,236,229,0.04)"/>
           <line x1="0" y1="180" x2="400" y2="180" stroke="rgba(240,236,229,0.04)"/>
