--- a/index.html
+++ b/index.html
@@ -644,13 +644,15 @@ footer { background: var(--ink-2); border-top: 1px solid rgba(240,236,229,.06); 
           <line x1="240" y1="0" x2="240" y2="500" stroke="rgba(240,236,229,0.04)"/>
           <line x1="300" y1="0" x2="300" y2="500" stroke="rgba(240,236,229,0.04)"/>
           <line x1="360" y1="0" x2="360" y2="500" stroke="rgba(240,236,229,0.04)"/>
-          <path d="M200 60 L200 110 L80 110 L80 170" stroke="#c85a1e" stroke-width="1" stroke-dasharray="4 4" opacity="0.5"/>
-          <path d="M200 60 L200 110 L320 110 L320 170" stroke="#c85a1e" stroke-width="1" stroke-dasharray="4 4" opacity="0.5"/>
+          <circle cx="200" cy="20" r="4" fill="#c85a1e"/>
+          <path d="M200 70 L200 110 L80 110 L80 170" stroke="#c85a1e" stroke-width="1" stroke-dasharray="4 4" opacity="0.5"/>
+          <path d="M200 70 L200 110 L320 110 L320 170" stroke="#c85a1e" stroke-width="1" stroke-dasharray="4 4" opacity="0.5"/>
           <path d="M80 232 L80 280 L200 280" stroke="rgba(238,235,228,0.1)" stroke-width="1"/>
           <path d="M320 232 L320 280 L200 280" stroke="rgba(238,235,228,0.1)" stroke-width="1"/>
           <path d="M200 310 L200 368" stroke="#c85a1e" stroke-width="1.5" opacity="0.7"/>
-          <rect x="140" y="20" width="120" height="44" rx="2" fill="rgba(200,90,30,0.12)" stroke="#c85a1e" stroke-width="1"/>
-          <text x="200" y="47" text-anchor="middle" fill="#c85a1e" font-family="Clash Display, sans-serif" font-weight="600" font-size="11" letter-spacing="1.5">MARKET RESEARCH</text>
+          <rect x="110" y="20" width="180" height="50" rx="2" fill="rgba(200,90,30,0.12)" stroke="#c85a1e" stroke-width="1"/>
+          <text x="200" y="43" text-anchor="middle" fill="#c85a1e" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">MARKET</text>
+          <text x="200" y="58" text-anchor="middle" fill="#c85a1e" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">RESEARCH</text>
           <rect x="20" y="170" width="120" height="62" rx="2" fill="rgba(238,235,228,0.03)" stroke="rgba(238,235,228,0.08)"/>
           <text x="80" y="198" text-anchor="middle" fill="rgba(238,235,228,0.5)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">SEARCH &amp;</text>
           <text x="80" y="214" text-anchor="middle" fill="rgba(238,235,228,0.5)" font-family="Clash Display, sans-serif" font-weight="600" font-size="10" letter-spacing="1.5">LSA ADS</text>
